--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ dependencies = [
     "python-dotenv==0.19.0",
     "slack-bolt==1.9.1",
     "slack-sdk==3.10.1",
-    "openai", 
+    "openai==0.28.1", 
     "google_api_python_client", 
     "google_auth_oauthlib", 
     "google-auth-httplib2",
