--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-auth-httplib2",
     "click",
     "dataclasses-json",
+    "pytz",
 ]
 
 [project.optional-dependencies]
